Fixed Page Title

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                             <div>Overview</div>
                             <div>Terms</div>
                         </div> -->
+                        <title>WCYS</title>
                     </div>
                 </div>
                 <hr>
